# bovw

./: README.md  pi-cai-trial.smk  pyproject.toml  setup.cfg
models/: kmeans
mri_bovw/: __init__.py  __main__.py  lib.py
mri_bovw/classify/: lib.py
mri_bovw/cluster/: __main__.py  lib.py
mri_bovw/cluster/predict/: __main__.py  lib.py
mri_bovw/cluster/tf_idf/: __main__.py  lib.py
mri_bovw/data/: lib.py
mri_bovw/keypoint/: __main__.py  lib.py
mri_bovw/mil/: data.py  lib.py
mri_bovw/mil/models/: transformer.py
mri_bovw/patches/: lib.py
