[tool.poetry]
name = mri_bovw
version = 0.1
authors = [
    "José Guilherme de Almeida",
    "Nuno Rodrigues"]
description = Package for MRI feature extraction using keypoint detection and description.
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[options]
install_requires =
    numpy
    opencv-contrib-python >= 4.7.0
    tqdm
    scikit-learn >= 1.2.0
    SimpleITK >= 2.2.1
    scipy

[options.entry_points]
console_scripts = 
    mri_bovw-keypoint = mri_bovw.keypoint:main